# plasma-layouts

./: CMakeLists.txt  FLATPAK.md  LayoutCard.qml  Main.qml  README.md  build-flatpak.sh  layouthandler.cpp  layouthandler.h  main.cpp  org.zachvlat.plasmalayouts.appdata.xml  org.zachvlat.plasmalayouts.desktop  org.zachvlat.plasmalayouts.flatpak  org.zachvlat.plasmalayouts.json
assets/Cosmic/: plasma-org.kde.plasma.desktop-appletsrc
assets/Macos/: plasma-org.kde.plasma.desktop-appletsrc
assets/NeoCosmic/: plasma-org.kde.plasma.desktop-appletsrc
assets/Redmond/: plasma-org.kde.plasma.desktop-appletsrc
assets/Ubuntu/: plasma-org.kde.plasma.desktop-appletsrc
assets/WM/: plasma-org.kde.plasma.desktop-appletsrc
assets/Windows/: plasma-org.kde.plasma.desktop-appletsrc
repo/: summary  summary.idx
repo/refs/heads/appstream/: x86_64
repo/summaries/: 0b6d103fe876a2894ec9c4c803a18b0b85861f5e6a7bf5f7b17fa1753f635359-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  0b6d103fe876a2894ec9c4c803a18b0b85861f5e6a7bf5f7b17fa1753f635359-6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912.delta  0b6d103fe876a2894ec9c4c803a18b0b85861f5e6a7bf5f7b17fa1753f635359-b4bc5d7ee3d9e6f1a67d7ac32ab88ef9d32b016f60ff360e0d1913d9af0750df.delta  0b6d103fe876a2894ec9c4c803a18b0b85861f5e6a7bf5f7b17fa1753f635359-c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690.delta  238c381442b7218aed98fa45f37df0b5366a10b8a7556dd75b1145215d55aa60-6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912.delta  2be3bc77e6346adb243f9c2bd88c6aac650525daf7010d60a6087faaed651708-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  2d8fa05115b0ded26470c202d2c1879a1093907cddde93ec473b9542e04900fe-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  36531f75773c3aa68ca412f2afa2e4bbbebda6cb59fccab4bdf25e0eea699430-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  36531f75773c3aa68ca412f2afa2e4bbbebda6cb59fccab4bdf25e0eea699430-b4bc5d7ee3d9e6f1a67d7ac32ab88ef9d32b016f60ff360e0d1913d9af0750df.delta  36795f45dd894af24689b17d42d3032ceaae8fc0094e3068bfa4d565cca8de18-6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912.delta  36795f45dd894af24689b17d42d3032ceaae8fc0094e3068bfa4d565cca8de18-b4bc5d7ee3d9e6f1a67d7ac32ab88ef9d32b016f60ff360e0d1913d9af0750df.delta  36795f45dd894af24689b17d42d3032ceaae8fc0094e3068bfa4d565cca8de18-c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690.delta  6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912-b4bc5d7ee3d9e6f1a67d7ac32ab88ef9d32b016f60ff360e0d1913d9af0750df.delta  84333d9ebaff82a5710875686a79746b79a2521ca4a7f9fde37a573903b0e089-6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912.delta  84333d9ebaff82a5710875686a79746b79a2521ca4a7f9fde37a573903b0e089-c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690.delta  96acc904e4581cc8226f6e46e7751216448dd51ba9c125c3db8ec2b1c08e9d4b-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  96acc904e4581cc8226f6e46e7751216448dd51ba9c125c3db8ec2b1c08e9d4b-c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690.delta  c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690-452cc44903dfb96922f5f0035f3bdfcd44081d9dc3c0fd5b6fbab214b1ff6b48.delta  c992cab83d76356c7b856f2b4d6bbe749a67918e1c71f6ed1d374e773ff49690-6996cf540bc425e9a2960506b174ef6dd35c76e71a0740bc98426d2ad83cb912.delta  (+8 more)
(+3 files in other folders)
